--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Название сайта</title>
 	<link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
 
@@ -24,6 +25,9 @@
 	<main>
 		<section class="hero">
 			<div class="background-image">
+                <div class="bg-container">
+                    <div class="bg-light"></div>
+                  </div>
 				<!-- фоновое изображение -->
 			</div>
 			<div class="hero-content">
