--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Название сайта</title>
-	<link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+	<link rel="stylesheet" href="/CSS/style.css">
+    <script src="/JS/script.js"></script>
 </head>
 <body>
 
