--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Название сайта</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
@@ -76,7 +76,7 @@
     <footer>
         <!-- футер сайта -->
     </footer>
-    <script src="/JS/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
