--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="bg-container">
         <div class="bg-light"></div>
     </div>
-    <header>
+      <header>
         <div class="logo">
-            <!-- логотип -->
+
         </div>
         <nav>
             <ul>
@@ -27,12 +27,10 @@
 
     <main>
 
-        <section class="hero">
+        <!-- <section class="hero"> -->
             <div class="background-image">
-
-                <!-- фоновое изображение -->
             </div>
-            <div class="hero-content">
+            <!-- <div class="hero-content">
                 <h1>Заголовок страницы</h1>
                 <p>Текстовый блок</p>
                 <a href="#" class="button">Кнопка</a>
@@ -40,42 +38,35 @@
         </section>
 
         <section class="services">
-            <!-- секция с услугами компании -->
+
         </section>
 
         <section class="slider">
             <div class="slider-container">
                 <div class="slide">
-                    <!-- содержимое первого слайда -->
                     <a href="#" class="button">Кнопка</a>
                 </div>
                 <div class="slide">
-                    <!-- содержимое второго слайда -->
                     <a href="#" class="button">Кнопка</a>
                 </div>
                 <div class="slide">
-                    <!-- содержимое третьего слайда -->
                     <a href="#" class="button">Кнопка</a>
                 </div>
             </div>
             <div class="slider-navigation">
-                <!-- навигация по слайдеру -->
             </div>
         </section>
 
         <section class="advantages">
-            <!-- секция с преимуществами -->
         </section>
 
         <section class="portfolio">
-            <!-- секция с портфолио -->
         </section>
 
     </main>
 
     <footer>
-        <!-- футер сайта -->
-    </footer>
+    </footer> -->
     <script src="JS/script.js"></script>
 </body>
 
