--- a/index.html
+++ b/index.html
@@ -9,64 +9,9 @@
 
 <body>
     <div class="bg-container">
+        <img src="../images/background1.jpg" alt="Background">
         <div class="bg-light"></div>
     </div>
-      <header>
-        <div class="logo">
-
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-
-        <!-- <section class="hero"> -->
-            <div class="background-image">
-            </div>
-            <!-- <div class="hero-content">
-                <h1>Заголовок страницы</h1>
-                <p>Текстовый блок</p>
-                <a href="#" class="button">Кнопка</a>
-            </div>
-        </section>
-
-        <section class="services">
-
-        </section>
-
-        <section class="slider">
-            <div class="slider-container">
-                <div class="slide">
-                    <a href="#" class="button">Кнопка</a>
-                </div>
-                <div class="slide">
-                    <a href="#" class="button">Кнопка</a>
-                </div>
-                <div class="slide">
-                    <a href="#" class="button">Кнопка</a>
-                </div>
-            </div>
-            <div class="slider-navigation">
-            </div>
-        </section>
-
-        <section class="advantages">
-        </section>
-
-        <section class="portfolio">
-        </section>
-
-    </main>
-
-    <footer>
-    </footer> -->
     <script src="JS/script.js"></script>
 </body>
 
