--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="bg-container">
-        <img src="../images/background1.jpg" alt="Background">
+        <img src="images/background1.jpg" alt="Background">
         <div class="bg-light"></div>
     </div>
     <script src="JS/script.js"></script>
