--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Название сайта</title>
-    <link rel="stylesheet" href="CSS\style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <div class="bg-container">
-        <img src="images\background1.jpg" alt="Background">
+        <img src="./images/background1.jpg" alt="Background">
         <div class="bg-light"></div>
     </div>
-    <script src="JS\script.js"></script>
+    <script src="./JS/script.js"></script>
 </body>
 
 </html>
