--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Название сайта</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
         <img src="IMG/background2.jpg" alt="Background">
         <div class="bg-light"></div>
     </div>
-    <script src="./JS/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
